skills gap fixed

--- a/style.scss
+++ b/style.scss
@@ -357,7 +357,7 @@ $jobdescription: #00C6C3;
                                     justify-content: center;
                                     align-items: center;
                                     margin: 4vh 0 0 5vh;
-                                    gap: 2vw;
+                                    gap: 1.5vw;
                                     .skill_circle {
                                         display: flex;
                                         flex-direction: column;
